layout/_grid.scss
@use '../abstracts/tokens' as *;
@use '../abstracts/functions' as *;
@use '../abstracts/mixins' as *;

.container {
    @include grid($cols: 1fr);
    width: 100vw;
    height: 100vh;

    @include respond-to(md){
        @include grid($cols: 240px 1fr);
    }
}

.main {
    @include grid($rows: 80px 1fr);
    background-color: color(bg-tertiary);
}

.content {
    padding: spacing(md); 
}

